--- a/.env
+++ b/.env
@@ -1,8 +1,9 @@
-PORT=":3000"
+PORT=3000
 
-DB_USER="root"
-DB_PASSWORD="root"
-DB_NAME="transfers"
+DB_USER=root
+DB_PASSWORD=root
+DB_NAME=transfers
+DB_HOST=localhost
 
-CRYPT_KEY="0123456789abcdef"
-JWT_KEY="3257b6a4-3bb3-11ee-be56-0242ac120002"
+CRYPT_KEY=0123456789abcdef
+JWT_KEY=3257b6a4-3bb3-11ee-be56-0242ac120002
