--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3'
 
 services:
 
-  mysql:
+  db-transfers:
     image: mysql:5.7
     container_name: db-transfers
     ports:
@@ -11,3 +11,19 @@ services:
       - MYSQL_DATABASE=transfers
       - MYSQL_ROOT_PASSWORD=root
       - MYSQL_PASSWORD=root
+  transfer-server:
+    container_name: transfer-server
+    build: .
+    restart: on-failure
+    ports:
+      - "3000:3000"
+    environment:
+      - PORT=3000
+      - DB_USER=root
+      - DB_PASSWORD=root
+      - DB_NAME=transfers
+      - DB_HOST=db-transfers
+      - CRYPT_KEY=0123456789abcdef
+      - JWT_KEY=3257b6a4-3bb3-11ee-be56-0242ac120002
+    depends_on:
+      - db-transfers
